--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Stranger's Things</title>
+        <link rel="stylesheet" href="styles.css">
         <script src="./dist/main.js" defer></script>
     </head>
     <body>
